Update CORS configuration to allow specific origins and essential headers